sort.basic.cocktail.AlgCocktailSort2.scala.error
Erreur de compilation :
AlgCocktailSort2:5: error: ')' expected but ';' found.
if ((isSmaller((x-count); (x-count-1)))&&test) {swap((x-count+1), (x-count)); test=false; beg=beg+1}; count=count+1}; count=0}}
                        ^AlgCocktailSort2:5: error: ';' expected but ')' found.
if ((isSmaller((x-count); (x-count-1)))&&test) {swap((x-count+1), (x-count)); test=false; beg=beg+1}; count=count+1}; count=0}}
                                     ^